<!--suppress ALL -->
<resources>
    <string name="app_name">TicTacToe</string>
    <string name="about_us">Designed by:</string>
    <string name="about_us5">Mr. Nyerhovwo Adjekughene  </string>

    <string name="about_us1">For the Take a Climb Challenge,</string>
    <string name="about_us2">ALC 2.0, Lagos State, Nigeria.</string>
    <string name="about_us3">nerojust4@gmail.com </string>
    <string name="about_us6">@Nerojust</string>
    <string name="about_us7">@Nerojust</string>
    <string name="about_us8">@Nero_sax</string>
    <string name="about_us9">@Nerosax</string>
    <string name="about_us4">+234 8069 809921</string>
    <string name="game_instructions">The object of Tic Tac Toe is to get three in a row. You play on a three by three game board. The first player is known as X and the second is O.
        Players alternate placing Xs and Os on the game board until either opponent has three in a row or all nine squares are filled.
        X always goes first, and in the event that no one has three in a row, the stalemate is called a cat game.</string>

    <string name="game_instructions1">Tic-tac-toe (also known as noughts and crosses or Xs and Os) is a paper-and-pencil game for two players, X and O, who take turns marking the spaces in a 3×3 or a 3×5 grid.
        The player who succeeds in placing three of their marks in a horizontal, vertical, or diagonal row wins the game.</string>
    <string name="aboutUs">About Us</string>
    <string name="instructions">Instructions</string>
    <string name="other_apps_by_nerojust">Other Apps by Nerojust</string>
    <string name="exit_menu">Exit</string>
    <string name="ultimate_cup_challenge">Ultimate Cup Challenge</string>
    <string name="player_mode">Player Mode</string>
    <string name="alc">ALC 2.0</string>
    <string name="take_a_climb_challenge">Take a Climb Challenge</string>
    <string name="version">Version.1.0</string>
    <string name="tic">Tic</string>
    <string name="tac">Tac</string>
    <string name="toe">Toe</string>
    <string name="ladder_description">mimicking climbing a ladder</string>
    <string name="tictactoe_image_splashscreen">TicTacToe image at splashscreen startup</string>
    <string name="my_picture_at_demo">Image of myself during presentation at Andela ALC 2.0</string>
    <string name="player_O">Player O: 0</string>
    <string name="draw">Draw: O</string>
    <string name="player_X">PlayerX: O</string>
    <string name="reset">reset</string>
    <string name="five_boards">5 Boards</string>
    <string name="three_boards">3 Boards</string>
    <string name="exit">Exit</string>
    <string name="two_player_mode">2-Player Mode</string>
    <string name="single_player_mode">1-Player Mode</string>
    <string name="multiple_players">Play Online with other players</string>
    <string name="reset_game">Reset Game</string>
    <string name="instruction">Instruction</string>
    <string name="about_us_menu">About Us</string>
    <string name="play">PLAY</string>
    <string name="enter_player_1_name">Enter Player Name</string>
    <string name="enter_player_2_name">Enter Player Name</string>
    <string name="pizza_app">Pizza App</string>
    <string name="local_news_app">Local News App</string>
    <string name="music_app">Music App</string>
    <string name="movie_app">Movie App</string>
    <string name="miwok_app">Miwok App</string>
    <string name="earthquake_app">Earthquake_app</string>
    <string name="world_news_app">World News App</string>
</resources>
