<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/generallayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ttt"
    android:orientation="vertical"
    tools:context="com.example.android.tictactoe2.OptionsActivity.OptionMenu"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/ttt"
        android:orientation="vertical">

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/pizza_app"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="41dp"
                android:background="@drawable/buttonstyle2"
                android:text="@string/pizza_app" />

            <Button
                android:id="@+id/local_news_app"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle2"
                android:layout_marginTop="51dp"
                android:text="@string/local_news_app" />

            <Button
                android:id="@+id/world_news_app"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle2"
                android:layout_marginTop="51dp"
                android:text="@string/world_news_app" />

            <Button
                android:id="@+id/earthquake_app"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle2"
                android:layout_marginTop="51dp"
                android:text="@string/earthquake_app" />

            <Button
                android:id="@+id/music_app"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle2"
                android:layout_marginTop="51dp"
                android:text="@string/music_app" />

            <Button
                android:id="@+id/movie_app"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle2"
                android:layout_marginTop="51dp"
                android:text="@string/movie_app" />

            <Button
                android:id="@+id/miwok"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle2"
                android:layout_marginTop="51dp"
                android:layout_marginBottom="30dp"
                android:text="@string/miwok_app" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
