<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            android:src="@drawable/nero1"
            tools:ignore="ContentDescription,HardcodedText" />

        <LinearLayout
            android:id="@+id/houseeverything"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/designedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/about_us"
                android:textSize="20sp"
                tools:targetApi="jelly_bean" />

            <View
                android:layout_width="300dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="#244d7b" />

            <TextView
                android:id="@+id/myName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/about_us5"
                android:textColor="@color/my_name_aboutus"
                android:textSize="20sp"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/takeaclimb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/about_us1"
                android:textColor="@color/take_a_climb_aboutUs"
                android:textSize="16sp"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/alcLagos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/about_us2"
                android:textColor="@color/alc_lagos_nigeria_aboutus"
                android:textSize="18sp"
                tools:targetApi="jelly_bean" />

            <View
                android:layout_width="300dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/view_line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/emailimage"
                    android:drawablePadding="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/about_us3"
                    android:textColor="@color/information_color"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="jelly_bean" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignTop="@+id/phoneWhatsappText"
                        android:layout_toLeftOf="@+id/phoneWhatsappText"
                        android:layout_toStartOf="@+id/phoneWhatsappText"
                        android:contentDescription="TODO"
                        android:src="@drawable/whatsapp"
                        tools:ignore="ContentDescription,HardcodedText,RtlHardcoded" />

                    <TextView
                        android:id="@+id/phoneWhatsappText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/phoneimage"
                        android:drawablePadding="1dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/about_us4"
                        android:textColor="@color/information_color"
                        android:textSize="@dimen/textSize_aboutus_details"
                        tools:ignore="RelativeOverlap,RtlHardcoded"
                        tools:targetApi="jelly_bean" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignTop="@+id/slackTExt"
                        android:layout_toLeftOf="@+id/slackTExt"
                        android:layout_toStartOf="@+id/slackTExt"
                        android:contentDescription="TODO"
                        android:src="@drawable/slack"
                        tools:ignore="ContentDescription,HardcodedText,RtlHardcoded" />

                    <TextView
                        android:id="@+id/slackTExt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:drawablePadding="10dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/about_us6"
                        android:textColor="#284d04"
                        android:textSize="16sp"
                        tools:ignore="RelativeOverlap,RtlHardcoded"
                        tools:targetApi="jelly_bean" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignTop="@+id/instagram_text"
                        android:layout_toLeftOf="@+id/instagram_text"
                        android:layout_toStartOf="@+id/instagram_text"
                        android:contentDescription="@string/my_picture_at_demo"
                        android:src="@drawable/instagram"
                        tools:ignore="ContentDescription,HardcodedText,RtlHardcoded" />

                    <TextView
                        android:id="@+id/instagram_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:drawablePadding="10dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/about_us8"
                        android:textColor="@color/information_color"
                        android:textSize="@dimen/textSize_aboutus_details"
                        tools:ignore="RelativeOverlap,RtlHardcoded"
                        tools:targetApi="jelly_bean" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignTop="@+id/facebookText"
                        android:layout_toLeftOf="@+id/facebookText"
                        android:layout_toStartOf="@+id/facebookText"
                        android:contentDescription="TODO"
                        android:src="@drawable/facebook"
                        tools:ignore="ContentDescription,HardcodedText,RtlHardcoded" />

                    <TextView
                        android:id="@+id/facebookText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:drawablePadding="10dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/about_us9"
                        android:textColor="@color/information_color"
                        android:textSize="@dimen/textSize_aboutus_details"
                        tools:ignore="RelativeOverlap,RtlHardcoded"
                        tools:targetApi="jelly_bean" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignTop="@+id/twitter_text"
                        android:layout_toLeftOf="@+id/twitter_text"
                        android:layout_toStartOf="@+id/twitter_text"
                        android:contentDescription="TODO"
                        android:src="@drawable/twitter"
                        tools:ignore="ContentDescription,HardcodedText,RtlHardcoded" />

                    <TextView
                        android:id="@+id/twitter_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:drawablePadding="10dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/about_us6"
                        android:textColor="@color/information_color"
                        android:textSize="@dimen/textSize_aboutus_details"
                        tools:ignore="RelativeOverlap,RtlHardcoded"
                        tools:targetApi="jelly_bean" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</ScrollView>
