<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/three_total_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BoardType.ThreeBoardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/scorePlayer1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:freezesText="true"
            android:text="@string/player_O"
            android:textSize="@dimen/player_text_draw_size"/>

        <TextView
            android:id="@+id/drawPlayers"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:freezesText="true"
            android:text="@string/draw"
            android:textSize="@dimen/player_text_draw_size"/>

        <TextView
            android:id="@+id/scorePlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:freezesText="true"
            android:text="@string/player_X"
            android:textSize="@dimen/player_text_draw_size"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:id="@+id/button_00"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textColor="@color/viewcolor"
                android:textSize="@dimen/general_button_button_size"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/button_01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textColor="#a76060"
                android:textSize="@dimen/general_button_button_size"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textColor="@color/viewcolor"
                android:textSize="@dimen/general_button_button_size"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:id="@+id/button_10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textColor="@color/viewcolor"
                android:textSize="@dimen/general_button_button_size"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/button_11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textColor="@color/viewcolor"
                android:textSize="@dimen/general_button_button_size"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textColor="@color/viewcolor"
                android:textSize="@dimen/general_button_button_size"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:id="@+id/button_20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textColor="@color/viewcolor"
                android:textSize="@dimen/general_button_button_size"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/button_21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textColor="@color/viewcolor"
                android:textSize="@dimen/general_button_button_size"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="true"
                android:textColor="@color/viewcolor"
                android:textSize="@dimen/general_button_button_size"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttonstyle"
            android:text="@string/reset"/>
    </LinearLayout>


</LinearLayout>